src/test/ui/array-slice-vec/array-break-length.stderr
error[E0268]: `break` outside of a loop
  --> $DIR/array-break-length.rs:3:17
   |
LL |         |_: [_; break]| {}
   |                 ^^^^^ cannot `break` outside of a loop

error[E0268]: `continue` outside of a loop
  --> $DIR/array-break-length.rs:7:17
   |
LL |         |_: [_; continue]| {}
   |                 ^^^^^^^^ cannot `continue` outside of a loop

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0268`.
